tests/integration/workspace/snapshots/integration__workspace__symbol__filter_type_item.snap
---
source: tests/integration/workspace/symbol.rs
assertion_line: 133
expression: result.actual_symbols
---
[
  {
    "deprecated": false,
    "kind": 22,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 24,
          "character": 4
        },
        "end": {
          "line": 24,
          "character": 28
        }
      }
    },
    "name": "1"
  },
  {
    "deprecated": false,
    "kind": 22,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 25,
          "character": 4
        },
        "end": {
          "line": 25,
          "character": 28
        }
      }
    },
    "name": "2"
  },
  {
    "deprecated": false,
    "kind": 22,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 26,
          "character": 4
        },
        "end": {
          "line": 26,
          "character": 28
        }
      }
    },
    "name": "3"
  }
]
