tests/integration/workspace/snapshots/integration__workspace__symbol__filter_type_section.snap
---
source: tests/integration/workspace/symbol.rs
assertion_line: 121
expression: result.actual_symbols
---
[
  {
    "deprecated": false,
    "kind": 2,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 7,
          "character": 0
        },
        "end": {
          "line": 11,
          "character": 14
        }
      }
    },
    "name": "1 Foo"
  },
  {
    "deprecated": false,
    "kind": 2,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 13,
          "character": 0
        },
        "end": {
          "line": 19,
          "character": 12
        }
      }
    },
    "name": "2 Bar"
  },
  {
    "deprecated": false,
    "kind": 2,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 21,
          "character": 0
        },
        "end": {
          "line": 27,
          "character": 15
        }
      }
    },
    "name": "3 Baz"
  },
  {
    "deprecated": false,
    "kind": 2,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 29,
          "character": 0
        },
        "end": {
          "line": 35,
          "character": 11
        }
      }
    },
    "name": "4 Qux"
  }
]
